# webinar-crewai-qdrant-obsidian

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
scripts/: run-qdrant.sh
src/email_assistant/: crew.py  models.py  storage.py
src/email_assistant/config/autoresponder/: agents.yaml  tasks.yaml
src/email_assistant/config/knowledge/: agents.yaml  tasks.yaml
src/email_assistant/config/notion_query/: agents.yaml  tasks.yaml
src/email_assistant/gmail/: __init__.py  adapter.py  dto.py  events.py  handlers.py  inbox.py  models.py
src/email_assistant/notion/: handlers.py  query.py
src/email_assistant/obsidian/: handlers.py
src/email_assistant/tools/qdrant_tool/: tool.py
templates/: chat.html
